2005-03-06  Gary Cramblitt (PhantomsDad)
        * Consolidated all the translation catalogues into single catalog called "kttsd".

2005-03-05  Gary Cramblitt (PhantomsDad)
        * Add support for Kiswahili, Zulu, and Ibibio Festival languages.  Get them at
          http://www.llsti.org/index.htm.  Note that Ibibio does not have an assigned two-letter
          (iso 639) code, so I gave it Zulu (zu), which is probably as bad as saying that English
          is French, but it cannot be helped.  The Ibibio and Zulu voices will only speak valid
          Ibibio or Zulu text, so the Test button is non-functional for them until translators
          provide translations.

2005-03-02  Gary Cramblitt (PhantomsDad)
        * BUG:100600 Fix for messages and warnings not spoken when text job is paused.
        * Bug.  Talker Chooser claims it can autoconfigure itself, but it cannot really.
        * Allow to remove any Filter.

2005-02-17  Gary Cramblitt (PhantomsDad)
        * Remove festival/ and festivalcs/ plugins from source tree.  AFAIK, these plugins don't work
          and nobody is using them.  And these are confusing packagers who think we have a build
          dependency on Festival and Speech Tools libraries. Use festivalint/.

2005-02-15  Gary Cramblitt (PhantomsDad)
        * Translations now working.
        * Include a copy of kdelibs/interfaces/kspeech in compat/ dir.  This permits distribution
          and compilation of KTTS for KDE less than 3.4.
        * Support for Italian voices.  Download from
          http://www.csrf.pd.cnr.it/TTS/It-FESTIVAL-download.htm.
          or http://mirko.lilik.it/Italian-FESTIVAL.zip

2005-02-05  Gary Cramblitt (PhantomsDad)
        * Version bumped to 0.3.0.
        * Russian Festival voice added to voices file.  Download voice from
          http://nshmyrev.narod.ru/festival/festival.html.  Must have Festival 1.95 beta or later.