@@ -1,3 +1,6 @@
+2005-03-09  Gary Cramblitt (PhantomsDad)
+        * Add Hold and Resume items to systray menu.
+
 2005-03-06  Gary Cramblitt (PhantomsDad)
         * Consolidated all the translation catalogues into single catalog called "kttsd".
 
